--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Stampa cartellini</title>
+    <link rel="stylesheet" href="./css/index.css">
   </head>
   <body>
   <div>
-    <input id="search_bar" type="text" placeholder="Search"/>
-    <button id="clear_btn">X</button>
+    <input id="search_bar" type="search" incremental autosave results="5" placeholder="Search ..."/>
     <div id="lista_cartellini"></div>
   </div>
   <div id="recap">
@@ -17,6 +17,6 @@
   <button id="new">crea nuovo</button>
   <div id="form"></div>
 
-  <script src="./app.js"></script>
+  <script src="./js/app.js"></script>
   </body>
 </html>
