--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,71 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Stampa cartellini</title>
-    <link rel="stylesheet" href="./css/index.css">
-  </head>
-  <body>
-  <div>
-    <input id="search_bar" type="search" incremental autosave results="5" placeholder="Search ..."/>
-    <div id="lista_cartellini"></div>
+<head>
+  <meta charset="utf-8">
+  <title>Stampa cartellini</title>
+  <link rel="stylesheet" href="./css/index.css">
+</head>
+<body>
+  <div id="list_folder">
+    <div id="total_list">
+      <div id="search_container">
+          <span class="icon"><i class="fa fa-search"></i></span>
+          <input id="search_bar" type="search" incremental autosave results="5" placeholder="Search ..." />
+      </div>
+      <div id="lista_cartellini"></div>
+    </div>    
+    <div id="to_print" class="hidden" >
+      <div id="to_print_label" onclick="toggleParent(this, 'hidden')">
+        <span>SELEZIONATI</span>
+      </div>
+      <div id="to_print_list"></div>
+    </div>
   </div>
-  <div id="recap">
-    <div id="recap_list"></div>
-    <button id="print">stampa</button>
-  </div>
-  <button id="new">crea nuovo</button>
-  <div id="form"></div>
+  
+  <div id="form_new" class="hidden">
+    <div id="new_label" onclick="toggleParent(this, 'hidden')">
+      <span>crea nuovo</span>
+    </div>
+    <form>
 
+    </form>
+  </div>
+
+  <script>
+    
+    function toggleParent(el, className){
+      console.log(el.parentNode);
+      toggle(el.parentNode, className);
+    }
+
+    function toggle(el, className){
+      if(hasClass(el, className))
+        removeClass(el, className)
+      else
+        addClass(el, className)
+    }
+
+    function removeClass(el, className){
+      if (el.classList)
+        el.classList.remove(className);
+      else
+        el.className = el.className.replace(new RegExp('(^|\\b)' + className.split(' ').join('|') + '(\\b|$)', 'gi'), ' ');
+    }
+
+    function addClass(el, className){
+      if (el.classList)
+        el.classList.add(className);
+      else
+        el.className += ' ' + className;
+    }
+
+    function hasClass(el, className){
+      if (el.classList)
+        return el.classList.contains(className);
+      else
+        return new RegExp('(^| )' + className + '( |$)', 'gi').test(el.className);
+    }
+  </script>
   <script src="./js/app.js"></script>
-  </body>
+</body>
 </html>
