--- a/src/html/cartellino.html
+++ b/src/html/cartellino.html
@@ -4,6 +4,12 @@
         <p role="crt_descrizione"></p>
     </div>
     <div class="qty_modifier">
-        <button role="crt_minus">-</button><input role="crt_qty" pattern="[0-9]|Backspace|Shift|Arrow(.*)|Delete|End|Home"/><button role="crt_plus">+</button>
+        <div>
+            <input role="crt_qty" pattern="[0-9]|Backspace|Shift|Arrow(.*)|Delete|End|Home"/>
+        </div>
+        <div>
+            <button role="crt_plus">+1</button><button role="crt_plus5">+5</button>
+            <button role="crt_minus">-1</button><button role="crt_minus5">-5</button>
+        </div>
     </div>
 </div>
