--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
         <span>SELEZIONATI</span>
       </div>
       <div id="to_print_list"></div>
+      <button id="print">print</button>
     </div>
   </div>
   
@@ -30,42 +31,6 @@
 
     </form>
   </div>
-
-  <script>
-    
-    function toggleParent(el, className){
-      console.log(el.parentNode);
-      toggle(el.parentNode, className);
-    }
-
-    function toggle(el, className){
-      if(hasClass(el, className))
-        removeClass(el, className)
-      else
-        addClass(el, className)
-    }
-
-    function removeClass(el, className){
-      if (el.classList)
-        el.classList.remove(className);
-      else
-        el.className = el.className.replace(new RegExp('(^|\\b)' + className.split(' ').join('|') + '(\\b|$)', 'gi'), ' ');
-    }
-
-    function addClass(el, className){
-      if (el.classList)
-        el.classList.add(className);
-      else
-        el.className += ' ' + className;
-    }
-
-    function hasClass(el, className){
-      if (el.classList)
-        return el.classList.contains(className);
-      else
-        return new RegExp('(^| )' + className + '( |$)', 'gi').test(el.className);
-    }
-  </script>
   <script src="./js/app.js"></script>
 </body>
 </html>
