showSaveDialog (still notWork), linting, package fixing (still notWork)

--- a/src/html/cartellino.html
+++ b/src/html/cartellino.html
@@ -1,6 +1,8 @@
 <div class="cartellino" role="crt_element">
     <div class="crt_details">
-        <h3 role="crt_nome"></h3>
+        <h4 role="crt_nome"></h4>
+        <h5 role="crt_requisiti"></h5>
+        <h5 role="crt_fattura"></h5>
         <p role="crt_descrizione"></p>
     </div>
     <div class="qty_modifier">
