--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,12 @@
       <span>crea nuovo</span>
     </div>
     <form>
-
+      <label>Nome</label>
+      <label>Requisiti</label>
+      <label>Fattura</label>
+      <label>Descrizione</label>
+      <label>Colore</label>
+      
     </form>
   </div>
   <script src="./js/app.js"></script>
