--- a/src/html/selezionato.html
+++ b/src/html/selezionato.html
@@ -1,6 +1,8 @@
 <div class="selezionato" role="crt_selected">
     <div class="crt_details">
-        <h3 role="crt_nome"></h3>
+        <h4 role="crt_nome"></h4>
+        <h5 role="crt_requisiti"></h5>
+        <h5 role="crt_fattura"></h5>
         <p role="crt_descrizione"></p>
     </div>
     <span role="qty"></span>
