--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     </div>    
     <div id="to_print" class="hidden" >
       <div id="to_print_label" onclick="toggleParent(this, 'hidden')">
-        <span>SELEZIONATI</span>
+        <span></span>
       </div>
       <div id="to_print_list"></div>
       <button id="print">print</button>
@@ -25,7 +25,7 @@
   
   <div id="form_new" class="hidden">
     <div id="new_label" onclick="toggleParent(this, 'hidden')">
-      <span>crea nuovo</span>
+      <span></span>
     </div>
     <form id="form">
       <label>Nome</label>
